Ändrat preview i pom.xml fil enligt botens råd