@@ -85,7 +85,7 @@
                 <configuration>
                     <source>25</source>
                     <target>25</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
         </plugins>
